--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <div class="instagram-phone">
+            <img src="./images/instagram-celular.png" alt="celular">
+        </div>
+        <div class="intagram-continue">
+            <div class="group">
+                <img src="./images/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <div class="profile-photo">
+                    <img src="./images/perfil-instagram-vini.jpg" alt="foto perfil">
+                </div>
+                <a href="#" class="instagram-login">Continue como vinituis</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
